--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#2084c0</color>
     <color name="colorPrimaryDark">#1e83c0</color>
-    <color name="colorAccent">#1aa9fd</color>
+    <color name="colorAccent">#0669a3</color>
 </resources>
