--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient android:angle="135"
-        android:startColor="#f7f9fa"
-        android:centerColor="#88d6ee"
-        android:endColor="#f5f8f9"
+        android:startColor="#9cd9f7"
+        android:centerColor="#9dd9f7"
+        android:endColor="#9cd9f7"
         android:type="linear">
     </gradient>
 </shape>
