--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="#03A9F4"
     tools:context="com.example.ashi.a1myapplication.AboutUs">
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank fragment layout-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,14 +63,13 @@
             android:text="Ring us on +91-9557068744"
             android:textColor="#000"
             android:textStyle="bold" />
-
-        <ImageView
+        <Button
             android:id="@+id/imageView3"
             android:layout_width="130dp"
             android:layout_height="130dp"
-            android:layout_gravity="right"
-            android:layout_marginLeft="6dp"
-            android:src="@drawable/android5" />
+            android:padding="10dp"
+            android:gravity="center"
+            android:background="@drawable/android5"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
