--- a/app/src/main/res/layout/activity_after_registration.xml
+++ b/app/src/main/res/layout/activity_after_registration.xml
@@ -20,7 +20,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Amount to be Paid : "
+        android:text="Amount to be Paid : ₹ "
         android:id="@+id/amount"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
