--- a/app/src/main/res/layout/activity_after_membership_registration.xml
+++ b/app/src/main/res/layout/activity_after_membership_registration.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.example.ashi.a1myapplication.AfterMembershipRegistration">
 
     <LinearLayout
@@ -29,7 +30,7 @@
             android:id="@+id/amount"
             android:textSize="18sp"
             android:layout_marginTop="10dp"
-            android:textColor="#406bf6"/>
+            android:textColor="#0038ef"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -74,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:textColor="#1247f5"
+                android:textColor="#043bf2"
                 android:textSize="18sp"
                 android:text="+91 8279825702"/>
         </LinearLayout>
