--- a/app/src/main/res/layout/activity_after_registration.xml
+++ b/app/src/main/res/layout/activity_after_registration.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.example.ashi.a1myapplication.AfterRegistration">
@@ -24,7 +25,7 @@
         android:id="@+id/amount"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
-        android:textColor="#406bf6"/>
+        android:textColor="#003bf9"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:textColor="#1247f5"
+        android:textColor="#003af7"
         android:textSize="18sp"
         android:text="+91 8279825702"/>
     </LinearLayout>
