splash screen created

--- a/app/src/main/res/layout/fragment_prodigy.xml
+++ b/app/src/main/res/layout/fragment_prodigy.xml
@@ -21,6 +21,7 @@
         android:horizontalSpacing="10dp"
         android:verticalSpacing="10dp"
         android:padding="5dp"
+        android:visibility="visible"
         android:id="@+id/gridview">
     </GridView>
 </RelativeLayout>
