splash screen created

--- a/app/src/main/res/layout/activity_loader.xml
+++ b/app/src/main/res/layout/activity_loader.xml
@@ -8,9 +8,9 @@
     android:background="#111215"
     android:gravity="center"
     tools:context="com.example.ashi.a1myapplication.Loader">
-
     <pl.droidsonroids.gif.GifTextView
-        android:layout_width="600dp"
-        android:layout_height="500dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:background="@drawable/loadinggif" />
 </LinearLayout>
