--- a/app/src/main/res/layout/activity_full_department_info.xml
+++ b/app/src/main/res/layout/activity_full_department_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ashi.a1myapplication.Full_department_info">
+    tools:context="com.agarwal.ashi.prodigy.Full_department_info">
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
