--- a/app/src/main/res/layout/activity_loader.xml
+++ b/app/src/main/res/layout/activity_loader.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#111215"
     android:gravity="center"
-    tools:context="com.example.ashi.a1myapplication.Loader">
+    tools:context="com.agarwal.ashi.prodigy.Loader">
     <pl.droidsonroids.gif.GifTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
