--- a/app/src/main/res/layout/fragment_departments.xml
+++ b/app/src/main/res/layout/fragment_departments.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    tools:context="com.example.ashi.a1myapplication.Departments">
+    tools:context="com.agarwal.ashi.prodigy.Departments">
 
     <!-- TODO: Update blank fragment layout -->
     <ListView
