--- a/app/src/main/res/layout/activity_after_membership_registration.xml
+++ b/app/src/main/res/layout/activity_after_membership_registration.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="com.example.ashi.a1myapplication.AfterMembershipRegistration">
+    tools:context="com.agarwal.ashi.prodigy.AfterMembershipRegistration">
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent"
-        tools:context="com.example.ashi.a1myapplication.AfterRegistration">
+        tools:context="com.agarwal.ashi.prodigy.AfterRegistration">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
