--- a/app/src/main/res/layout/activity_gallery_images.xml
+++ b/app/src/main/res/layout/activity_gallery_images.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background"
-    tools:context="com.example.ashi.a1myapplication.Gallery_images">
+    tools:context="com.agarwal.ashi.prodigy.Gallery_images">
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
