--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/background"
-    tools:context="com.example.ashi.a1myapplication.Gallery">
+    tools:context="com.agarwal.ashi.prodigy.Gallery">
     <!-- TODO: Update blank fragment layout -->
     <ProgressBar
         android:id="@+id/progress"
