--- a/app/src/main/res/layout/fragment_live_updates.xml
+++ b/app/src/main/res/layout/fragment_live_updates.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.ashi.a1myapplication.LiveUpdates">
+    tools:context="com.agarwal.ashi.prodigy.LiveUpdates">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
