--- a/app/src/main/res/layout/fragment_membership.xml
+++ b/app/src/main/res/layout/fragment_membership.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:padding="8dp"
 
-    tools:context="com.example.ashi.a1myapplication.Membership">
+    tools:context="com.agarwal.ashi.prodigy.Membership">
     <TextView
         android:text="Fill the Membership Form"
         android:textColor="#000"
