--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/background"
-    tools:context="com.example.ashi.a1myapplication.Register">
+    tools:context="com.agarwal.ashi.prodigy.Register">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
