--- a/app/src/main/res/layout/fragment_sponsors.xml
+++ b/app/src/main/res/layout/fragment_sponsors.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="com.example.ashi.a1myapplication.Sponsors">
+    tools:context="com.agarwal.ashi.prodigy.Sponsors">
 
     <!-- TODO: Update blank fragment layout -->
     <ProgressBar
