--- a/app/src/main/res/layout/activity_after_registration.xml
+++ b/app/src/main/res/layout/activity_after_registration.xml
@@ -17,15 +17,27 @@
         android:layout_marginTop="10dp"
         android:textColor="#000"
         android:textSize="18sp"
-        android:text="Thank You for registration please proceed for payment !"/>
+        android:text="To Complete registration please proceed for payment !"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Amount to be Paid : ₹ "
-        android:id="@+id/amount"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
         android:textColor="#003bf9"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/amount"
+            android:textSize="18sp"
+            android:text="0"
+            android:layout_marginTop="10dp"
+            android:textColor="#003bf9"/>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
