--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -150,7 +150,7 @@
         android:orientation="horizontal">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
     <TextView
@@ -168,8 +168,15 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ENGG-AGE"
+        android:text="ENGG-AGE(FIFA 18)"
         android:id="@+id/enggage"/>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ENGG-AGE
+(Tom Clancy's
+Rainbow Six Siege)"
+            android:id="@+id/enggagetom"/>
     <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -185,7 +192,7 @@ REFERENCE"
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
@@ -233,7 +240,7 @@ REFERENCE"
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="GOOGLE WORKSHOP"
+            android:text="GOOGLE PERSPECTIVE"
             android:id="@+id/googleworkshop"/>
         <CheckBox
             android:layout_width="wrap_content"
