--- a/app/src/main/res/layout/fragment_live_updates.xml
+++ b/app/src/main/res/layout/fragment_live_updates.xml
@@ -1,13 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.agarwal.ashi.prodigy.LiveUpdates">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/download" />
+
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Live Updates" />
-
-</FrameLayout>
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageView5"
+        android:id="@+id/list"/>
+</RelativeLayout>
