--- a/app/src/main/res/layout/fragment_live_updates.xml
+++ b/app/src/main/res/layout/fragment_live_updates.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.agarwal.ashi.prodigy.LiveUpdates">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,9 +12,7 @@
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_height="170dp"
         android:src="@drawable/download" />
 
     <ListView
